<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventEditActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btn_close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:minWidth="0dp"
                        app:backgroundTint="#FF0000"
                        app:icon="@android:drawable/ic_menu_close_clear_cancel"
                        app:iconPadding="0dp" />

                    <Button
                        android:id="@+id/btn_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:onClick="onClick"
                        android:text="@string/btn_delete"
                        app:backgroundTint="#FF0000" />

                    <Button
                        android:id="@+id/btn_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:text="@string/btn_edit"
                        app:backgroundTint="#595959" />
                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/label_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lable_event"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tb_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/tb_event_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/label_event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lable_date"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_date_picker" />

            <TextView
                android:id="@+id/lable_picked_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lable_picker_date"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/label_event_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lable_time"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btn_picker_start_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/btn_start_time" />

                    <Button
                        android:id="@+id/btn_picker_end_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:text="@string/btn_end_time" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/label_picked_start_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_weight="1"
                        android:text="@string/lable_start_time"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/label_picked_end_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:text="@string/lable_end_time"
                        android:textAlignment="center" />
                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/label_event_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lable_location"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tb_event_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/lable_location"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textPersonName"
                android:singleLine="false" />

            <TextView
                android:id="@+id/label_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lable_description"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tb_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/tb_description_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textPersonName"
                android:singleLine="false" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>